expanded tabs - fix bad wrapping on ipad

--- a/view/frontend/web/css/easytabs.less
+++ b/view/frontend/web/css/easytabs.less
@@ -45,7 +45,7 @@
 
             > .item.content {
                 border-top: 1px solid #ccc;
-                width: 75%;
+                width: ~'calc(75% - 1px)';
                 padding: 2rem .5rem;
             }
         }
